Added ngMaterial and resources ? ?

--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,10 +1,18 @@
 <div class="container">
-    <div class="row">
-        <div class="col-sm-4">
-            Side Panel
-        </div>
-        <div class="col-sm8">
-            Main Panel
-        </div>
-    </div>
+
+    <md-whiteframe class="md-whiteframe-13dp" layout layout="center">
+        <md-content class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    Top Row Home
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    Bottom Row Home
+                </div>
+            </div>
+        </md-content>
+    </md-whiteframe>
+
 </div>
