--- a/app/partials/profile.html
+++ b/app/partials/profile.html
@@ -1,13 +1,58 @@
-<div class="container">
-    <div class="row">
-        <h3>Edit {{ profile.$id }}</h3>
-        <!-- we can edit the $firebaseObject instance just like any other JS object -->
-        <form ng-submit="saveProfile()">
-            <label>Name:</label>
-            <input ng-model="profile.name" type="text">
-            <label>Email:</label>
-            <input ng-model="profile.email" type="text">
-            <button type="submit">Save Changes</button>
+<div ng-controller="DemoCtrl" layout="column">
+    <md-content md-theme="docs-dark" layout-padding layout="row" layout-sm="column">
+        <md-input-container>
+            <label>Title</label>
+            <input ng-model="user.title">
+        </md-input-container>
+        <md-input-container>
+            <label>Email</label>
+            <input ng-model="user.email" type="email">
+        </md-input-container>
+    </md-content>
+    <md-content layout-padding>
+        <form name="userForm">
+            <div layout layout-sm="column">
+                <md-input-container style="width:70%">
+                    <label>Company (Disabled)</label>
+                    <input ng-model="user.company" disabled>
+                </md-input-container>
+                <md-datepicker ng-model="user.submissionDate" md-placeholder="Enter date"></md-datepicker>
+            </div>
+            <div layout layout-sm="column">
+                <md-input-container flex>
+                    <label>First name</label>
+                    <input ng-model="user.firstName">
+                </md-input-container>
+                <md-input-container flex>
+                    <label>Last Name</label>
+                    <input ng-model="theMax">
+                </md-input-container>
+            </div>
+            <md-input-container flex>
+                <label>Address</label>
+                <input ng-model="user.address">
+            </md-input-container>
+            <md-input-container md-no-float>
+                <input ng-model="user.address2" placeholder="Address 2">
+            </md-input-container>
+            <div layout layout-sm="column">
+                <md-input-container flex>
+                    <label>City</label>
+                    <input ng-model="user.city">
+                </md-input-container>
+                <md-input-container flex>
+                    <label>State</label>
+                    <input ng-model="user.state">
+                </md-input-container>
+                <md-input-container flex>
+                    <label>Postal Code</label>
+                    <input ng-model="user.postalCode" placeholder="12345">
+                </md-input-container>
+            </div>
+            <md-input-container flex>
+                <label>Biography</label>
+                <textarea ng-model="user.biography" columns="1" md-maxlength="150"></textarea>
+            </md-input-container>
         </form>
-    </div>
+    </md-content>
 </div>
