--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -1,7 +1,134 @@
-<div class="container" layout>
-    <md-whiteframe class="md-whiteframe-z4 md-background"> Merp</md-whiteframe>
-
-    <md-content layout-padding>
-        Testing md-contents
-    </md-content>
+<div class="container">
+    <md-toolbar class="md-theme-light">
+        <h1 class="md-toolbar-tools"><span>Society of American Military Engineers (SAME)</span></h1>
+    </md-toolbar>
 </div>
+
+<div class="container">
+
+    <div class="row">
+        <md-whiteframe class="md-whiteframe-z4" layout>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-md-6">
+                        <h4>Orange County Post - Saddleback College Student Chapter</h4>
+
+                        <h3>About the Student Chapter</h3>
+
+                        <p>In August 2014, a group of students at Saddleback College began the process of creating a S.A.M.E. Student Chapter. They elected a transitional team who will create a charter, constitution, and by-laws for this organization. They will then apply for affiliated club status with the Saddleback College ASG.</p>
+
+                        <p>For more information about S.A.M.E., you can visit <a
+                                href="http://www.same.org">the National S.A.M.E. website</a> or <a
+                                href="http://sameoc.org">the local Orange County Chapter website.</a></p>
+
+                        <p>Visit our <a href="https://www.facebook.com/groups/801641596552914/">Facebook Page.</a></p>
+                    </div>
+                    <div class="col-xs-12 col-md-6">
+                        <h3>Chapter Bylaws, Charter, and Constitution</h3>
+
+                        <p>Chapter Bylaws: <a
+                                href="https://www.saddleback.edu/faculty/lperez/algebra2go/same/docs/samebylaws.pdf">Download Chapter Bylaws.</a>
+                        </p>
+
+                        <p>Chapter Charter: <a
+                                href="https://www.saddleback.edu/faculty/lperez/algebra2go/same/docs/samecharter.pdf">Download Chapter Charter.</a>
+                        </p>
+
+                        <p>Chapter Constitution: <a
+                                href="https://www.saddleback.edu/faculty/lperez/algebra2go/same/docs/sameconstitution.pdf">Download Chapter Constitution.</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </md-whiteframe>
+    </div>
+
+    <div class="row">
+
+        <md-whiteframe class="md-whiteframe-z4" layout>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-md-6 col-lg-3">
+                        <h3>President</h3>
+                        <h4>Greg Zeborski</h4>
+
+                        <md-content>
+                            <b>About Me</b>:On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.
+                        </md-content>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-3">
+                        <h3>Vice President</h3>
+                        <h4>Lucas Johnson</h4>
+
+                        <p>
+                            <b>About Me</b>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </p>
+                    </div>
+
+                    <div class="col-sm-12 col-md-6 col-lg-3">
+                        <h3>Secretary/Treasurer</h3>
+                        <h4>Nick Abey</h4>
+
+                        <p>
+                            <b>About Me</b>:Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+                        </p>
+
+                    </div>
+                </div>
+            </div>
+        </md-whiteframe>
+    </div>
+
+    <div class="row">
+        <md-whiteframe class="md-whiteframe-z4" layout>
+            <div class="col-xs-12 col-md-6 col-lg-3">
+                <h3>Student Outreach and Streamers Co-Chair</h3>
+                <h4>Jeremy Laster</h4>
+
+                <p><b>About Me</b>:
+                                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+                </p>
+            </div>
+        </md-whiteframe>
+    </div>
+    <div class="row">
+
+        <md-whiteframe class="md-whiteframe-z4" layout>
+            <div class="container">
+                <div class="row">
+                    <h2>Faculty Advisors</h2>
+
+                    <div class="col-xs-12 col-md-6 col-lg-3">
+                        <h3>Larry Perez</h3>
+                        <h5>Math Department</h5>
+
+                        <p>
+                            <b>E-mail:</b><a href="mailto:lperez@saddleback.edu">LPerez@saddleback.edu</a>
+                        </p>
+
+                        <p><b>About Me</b>:blah blah blah</p>
+                    </div>
+                    <div class="col-xs-12 col-md-6 col-lg-3">
+                        <h3>David Dixon </h3>
+                        <h5>Physics Department</h5>
+
+                        <p><b>E-mail:</b><a href="mailto:ddixon@saddleback.edu">DDixon@saddleback.edu</a></p>
+
+                        <p><b>About Me</b>:blah blah blah</p>
+                    </div>
+                    <div class="col-xs-12 col-md-6 col-lg-3">
+                        <h3>Patrick Quigley</h3>
+                        <h5>Math Department</h5>
+
+                        <p><b>E-mail:</b><a href="mailto:pquigley@saddleback.edu">PQuigley@saddleback.edu</a></p>
+
+                        <p><b>About Me</b>:blah blah blah</p>
+                    </div>
+                </div>
+
+        </md-whiteframe>
+    </div>
+</div>
+</div>
+</div>
+
