--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -1,43 +1,44 @@
-<div ng-controller="UserCtrl" layout="column">
-    <br/>
-    <md-content layout-padding class="autoScroll">
-        <md-input-container class="md-icon-float">
-            <!-- Use floating label instead of placeholder -->
-            <label>Name</label>
-            <md-icon md-svg-src="img/icons/ic_person_24px.svg" class="name"></md-icon>
-            <input ng-model="user.name" type="text">
-        </md-input-container>
-        <md-input-container md-no-float>
-            <md-icon md-svg-src="img/icons/ic_phone_24px.svg"></md-icon>
-            <input ng-model="user.phone" type="text" placeholder="Phone Number">
-        </md-input-container>
-        <md-input-container>
-            <!-- Use floating placeholder instead of label -->
-            <md-icon md-svg-src="img/icons/ic_email_24px.svg" class="email"></md-icon>
-            <input ng-model="user.email" type="email" placeholder="Email (required)" ng-required="true">
-        </md-input-container>
-        <md-input-container md-no-float>
-            <md-icon md-svg-src="img/icons/ic_place_24px.svg" style="display:inline-block;"></md-icon>
-            <input ng-model="user.address" type="text" placeholder="Address">
-        </md-input-container>
-    </md-content>
+<div class="container" ng-controller="MainCtrl">
+    <div class="row" layout-padding>
+        <md-content class="autoScroll">
+
+            <md-input-container class="md-icon-float">
+                <!-- Use floating label instead of placeholder -->
+                <label>Name</label>
+                <md-icon md-svg-src="img/icons/ic_person_24px.svg" class="name"></md-icon>
+                <input ng-model="user.name" type="text">
+            </md-input-container>
+            <md-input-container md-no-float>
+                <md-icon md-svg-src="img/icons/ic_phone_24px.svg"></md-icon>
+                <input ng-model="user.phone" type="text" placeholder="Phone Number">
+            </md-input-container>
+            <md-input-container>
+                <!-- Use floating placeholder instead of label -->
+                <md-icon md-svg-src="img/icons/ic_email_24px.svg" class="email"></md-icon>
+                <input ng-model="user.email" type="email" placeholder="Email (required)" ng-required="true">
+            </md-input-container>
+            <md-input-container md-no-float>
+                <md-icon md-svg-src="img/icons/ic_place_24px.svg" style="display:inline-block;"></md-icon>
+                <input ng-model="user.address" type="text" placeholder="Address">
+            </md-input-container>
+
+        </md-content>
+    </div>
+
+    <div class="row" layout-padding>
+
+        <div class="background-secondary" layout="row" layout-wrap>
+            <md-button class="md-primary md-raised" ng-click="showLogin($event)" flex flex-md="100">
+                Login
+            </md-button>
+            <md-button class="md-primary md-raised" ng-click="showRegister($event)" flex flex-md="100">
+                Register
+            </md-button>
+            <md-button class="md-primary md-raised" ui-sref="home" flex flex-md="100">
+                Go Back
+            </md-button>
+        </div>
+
+    </div>
 </div>
 
-
-<div class="dialog-demo-content" layout="row" layout-wrap>
-    <md-button class="md-primary md-raised" ng-click="showAlert($event)" flex flex-md="100">
-        Login
-    </md-button>
-    <md-button class="md-primary md-raised" ng-click="showConfirm($event)" flex flex-md="100">
-        Register
-    </md-button>
-    <md-button class="md-primary md-raised" ng-click="showAdvanced($event)" flex flex-md="100">
-        Go Back
-    </md-button>
-</div>
-<div ng-if="status">
-    <br/>
-    <b layout="row" layout-align="center center" class="md-padding">
-        {{status}}
-    </b>
-</div>
