--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,18 +1,40 @@
-<div class="container">
+<div class="container background-page">
+    <div class="row ">
+        <md-whiteframe class="md-whiteframe-z4" layout>
+            <div class="container center-panel">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h4>Orange County Post - Saddleback College Student Chapter</h4>
 
-    <md-whiteframe class="md-whiteframe-13dp" layout layout="center">
-        <md-content class="container">
-            <div class="row">
-                <div class="col-sm-6">
-                    Top Row Home
+                        <h3>About the Student Chapter</h3>
+
+                        <p>In August 2014, a group of students at Saddleback College began the process of creating a S.A.M.E. Student Chapter. They elected a transitional team who will create a charter, constitution, and by-laws for this organization. They will then apply for affiliated club status with the Saddleback College ASG.</p>
+
+                        <p>For more information about S.A.M.E., you can visit <a
+                                href="http://www.same.org">the National S.A.M.E. website</a> or <a
+                                href="http://sameoc.org">the local Orange County Chapter website.</a></p>
+
+                        <p>Visit our <a href="https://www.facebook.com/groups/801641596552914/">Facebook Page.</a></p>
+                    </div>
+                    <div class="col-xs-12">
+                        <h3>Chapter Bylaws, Charter, and Constitution</h3>
+
+                        <p>Chapter Bylaws: <a
+                                href="https://www.saddleback.edu/faculty/lperez/algebra2go/same/docs/samebylaws.pdf">Download Chapter Bylaws.</a>
+                        </p>
+
+                        <p>Chapter Charter: <a
+                                href="https://www.saddleback.edu/faculty/lperez/algebra2go/same/docs/samecharter.pdf">Download Chapter Charter.</a>
+                        </p>
+
+                        <p>Chapter Constitution: <a
+                                href="https://www.saddleback.edu/faculty/lperez/algebra2go/same/docs/sameconstitution.pdf">Download Chapter Constitution.</a>
+                        </p>
+                    </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-6">
-                    Bottom Row Home
-                </div>
-            </div>
-        </md-content>
-    </md-whiteframe>
+        </md-whiteframe>
+    </div>
+    <hr class="featurette-divider">
 
 </div>
