Added all students and faculty to the contact page. Logo and links on the home page.

--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -43,44 +43,85 @@
                 <h2 class="committee-header"><span>Committee Chairs</span></h2>
                 <hr class="featurette-divider">
                 <div class="row">
-                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 ">
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 ">
                         <h3>Program (Monthly Speaker) Committee Chair</h3>
                         <hr/>
                         <h4>Andy Helms </h4>
-<h6>ahelms0@saddleback.edu</h6>
+                        <h6>ahelms0@saddleback.edu</h6>
                         <hr/>
                         <md-content class="md-padding"><b>About Me</b>:
-                                          At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+                                                                      At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+                        </md-content>
+                    </div>
+
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 ">
+                        <h3>Membership Committee Chair</h3>
+                        <hr/>
+                        <h4>Leah Jamison</h4>
+                        <h6>leahjamison44@gmail.com</h6>
+                        <hr/>
+                        <md-content class="md-padding"><b>About Me</b>:
+                                                                      At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+                        </md-content>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 ">
+                        <h3>Student Retention Committee Chair</h3>
+                        <hr/>
+                        <h4>Andy Nelson</h4>
+                        <h6>andy.g.nelson@gmail.com</h6>
+                        <hr/>
+                        <md-content class="md-padding"><b>About Me</b>:
+                                                                      At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+                        </md-content>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 ">
+                        <h3>Fundraising Committee Chair</h3>
+                        <hr/>
+                        <h4>Dylon Dickinson</h4>
+                        <h6>Ddickson0@saddleback.edu</h6>
+                        <hr/>
+                        <md-content class="md-padding"><b>About Me</b>:
+                                                                      At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+                        </md-content>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 ">
+                        <h3>Student Membership Committee Chair</h3>
+                        <hr/>
+                        <h4>Erik Karlsson</h4>
+                        <h6>erikdkarlsson8@gmail.com</h6>
+                        <hr/>
+                        <md-content class="md-padding"><b>About Me</b>:
+                                                                      At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+                        </md-content>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 ">
+                        <h3>Activities / Competition Committee Chair</h3>
+                        <hr/>
+                        <h4>David Turney</h4>
+                        <h6>dayvidturnkee@gmail.com</h6>
+                        <hr/>
+                        <md-content class="md-padding"><b>About Me</b>:
+                                                                      At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
                         </md-content>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 ">
                         <h3>Student Outreach and Streamers Co-Chair</h3>
                         <hr/>
                         <h4>Jeremy Laster</h4>
-                        <h6>ahelms0@saddleback.edu</h6>
+                        <h6>hlaster0317@gmail.com</h6>
                         <hr/>
                         <md-content class="md-padding"><b>About Me</b>:
-                                          At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+                                                                      At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
                         </md-content>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 ">
                         <h3>Student Outreach and Streamers Co-Chair</h3>
                         <hr/>
-                        <h4>Jeremy Laster</h4>
-                        <h6>ahelms0@saddleback.edu</h6>
+                        <h4>Chad Province</h4>
+                        <h6>None available</h6>
                         <hr/>
                         <md-content class="md-padding"><b>About Me</b>:
-                                          At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
-                        </md-content>
-                    </div>
-                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 ">
-                        <h3>Student Outreach and Streamers Co-Chair</h3>
-                        <hr/>
-                        <h4>Jeremy Laster</h4>
-                        <h6>ahelms0@saddleback.edu</h6>
-                        <hr/>
-                        <md-content class="md-padding"><b>About Me</b>:
-                                          At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+                                                                      At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
                         </md-content>
                     </div>
                 </div>
@@ -91,7 +132,8 @@
     <div class="row">
         <md-whiteframe class="md-whiteframe-z4" layout>
             <div class="container center-panel">
-                <h2>Faculty Advisors</h2>
+                <h2>Faculty</h2>
+                <hr/>
                 <div class="row">
                     <div class="col-xs-12 col-md-6 col-lg-3">
                         <h3>Larry Perez</h3>
@@ -120,46 +162,47 @@
                         <p><b>About Me</b>:blah blah blah</p>
                     </div>
                     <div class="col-xs-12 col-md-6 col-lg-3">
-                        <h3>Patrick Quigley</h3>
+                        <h3>Lisa Silveira</h3>
                         <h5>Math Department</h5>
 
-                        <p><b>E-mail:</b><a href="mailto:pquigley@saddleback.edu">PQuigley@saddleback.edu</a></p>
+                        <p><b>E-mail:</b><a href="mailto:lsiveira@saddleback.edu">lsiveira@saddleback.edu</a></p>
+
+                        <p><b>About Me</b>:blah blah blah</p>
+                    </div>
+                    <div class="col-xs-12 col-md-6 col-lg-3">
+                        <h3>Katlin Choi</h3>
+                        <h5>Specialist / Project Specialist Programs</h5>
+
+                        <p><b>E-mail:</b><a href="mailto:kchoi@saddleback.edu">kchoi@saddleback.edu</a></p>
+
+                        <p><b>About Me</b>:blah blah blah</p>
+                    </div>
+                    <div class="col-xs-12 col-md-6 col-lg-3">
+                        <h3>Chris McDonald</h3>
+                        <h5>Dean of Math, Science and Engineering Dept.</h5>
+
+                        <p><b>E-mail:</b><a href=" "> </a></p>
 
                         <p><b>About Me</b>:blah blah blah</p>
                     </div>
                 </div>
+                <hr/>
+                <h2>SAME OC Post BOD Advisors</h2>
+
                 <div class="row">
                     <div class="col-xs-12 col-md-6 col-lg-3">
-                        <h3>Larry Perez</h3>
-                        <h5>Math Department</h5>
+                        <h3>Scott Pringle</h3>
 
                         <p>
-                            <b>E-mail:</b><a href="mailto:lperez@saddleback.edu">LPerez@saddleback.edu</a>
+                            <b>E-mail:</b><a href="mailto:lperez@saddleback.edu">scott.pringle@errg.com</a>
                         </p>
 
                         <p><b>About Me</b>:blah blah blah</p>
                     </div>
                     <div class="col-xs-12 col-md-6 col-lg-3">
-                        <h3>David Dixon </h3>
-                        <h5>Physics Department</h5>
+                        <h3>Jeff Davis</h3>
 
-                        <p><b>E-mail:</b><a href="mailto:ddixon@saddleback.edu">DDixon@saddleback.edu</a></p>
-
-                        <p><b>About Me</b>:blah blah blah</p>
-                    </div>
-                    <div class="col-xs-12 col-md-6 col-lg-3">
-                        <h3>Patrick Quigley</h3>
-                        <h5>Math Department</h5>
-
-                        <p><b>E-mail:</b><a href="mailto:pquigley@saddleback.edu">PQuigley@saddleback.edu</a></p>
-
-                        <p><b>About Me</b>:blah blah blah</p>
-                    </div>
-                    <div class="col-xs-12 col-md-6 col-lg-3">
-                        <h3>Patrick Quigley</h3>
-                        <h5>Math Department</h5>
-
-                        <p><b>E-mail:</b><a href="mailto:pquigley@saddleback.edu">PQuigley@saddleback.edu</a></p>
+                        <p><b>E-mail:</b><a href="mailto:jdavis@kleinfelder.com">jdavis@kleinfelder.com</a></p>
 
                         <p><b>About Me</b>:blah blah blah</p>
                     </div>
