--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -4,6 +4,16 @@
             <div class="container center-panel">
                 <div class="row">
                     <div class="col-xs-12">
+            <img ng-src="../../img/logos/SAME_logo.jpg" height="auto" width="auto">
+                    </div>
+                </div>
+            </div>
+
+        </md-whiteframe>
+        <md-whiteframe class="md-whiteframe-z4" layout>
+            <div class="container center-panel">
+                <div class="row">
+                    <div class="col-xs-12">
                         <h4>Orange County Post - Saddleback College Student Chapter</h4>
 
                         <h3>About the Student Chapter</h3>
