--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,25 +1,24 @@
 <div class="container background-page">
+    <div class="row hidden-xs">
+        <md-whiteframe class="md-whiteframe-z4 " layout>
+
+            <div class="container center-panel">
+                <div class="col-md-8">
+                    <img ng-src="../../img/logos/SAME_logo.jpg" class="responsive"  height="50%" width="70%">
+
+                </div>
+            </div>
+        </md-whiteframe>
+        <hr/>
+    </div>
     <div class="row ">
         <md-whiteframe class="md-whiteframe-z4" layout>
             <div class="container center-panel">
                 <div class="row">
                     <div class="col-xs-12">
-            <img ng-src="../../img/logos/SAME_logo.jpg" height="auto" width="auto">
-                    </div>
-                </div>
-            </div>
-
-        </md-whiteframe>
-        <md-whiteframe class="md-whiteframe-z4" layout>
-            <div class="container center-panel">
-                <div class="row">
-                    <div class="col-xs-12">
                         <h4>Orange County Post - Saddleback College Student Chapter</h4>
-
                         <h3>About the Student Chapter</h3>
-
                         <p>In August 2014, a group of students at Saddleback College began the process of creating a S.A.M.E. Student Chapter. They elected a transitional team who will create a charter, constitution, and by-laws for this organization. They will then apply for affiliated club status with the Saddleback College ASG.</p>
-
                         <p>For more information about S.A.M.E., you can visit <a
                                 href="http://www.same.org">the National S.A.M.E. website</a> or <a
                                 href="http://sameoc.org">the local Orange County Chapter website.</a></p>
