--- a/app/partials/templates/login.tmpl.html
+++ b/app/partials/templates/login.tmpl.html
@@ -12,7 +12,7 @@
         <md-dialog-content style="max-width:800px;max-height:810px; ">
             <div>
                 <p>
-                    Successfully Logged in.
+                    Login Unsuccessful.
                 </p>
             </div>
         </md-dialog-content>
