--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -4,27 +4,69 @@
 
             <div class="container center-panel">
                 <div class="col-md-8">
-                    <img ng-src="../../img/logos/SAME_logo.jpg" class="responsive"  height="50%" width="70%">
+                    <img ng-src="../../img/logos/SAME_logo.jpg" class="responsive" height="50%" width="70%">
 
                 </div>
             </div>
         </md-whiteframe>
         <hr/>
     </div>
+
+    <md-whiteframe class="md-whiteframe-z4" layout>
+        <div class="container center-panel">
+            <div class="row">
+                <div class="col-xs-6">
+                    <img width="100%" height="100%"
+                         ng-src="http://saddleback.mycareerfocus.org/wp-content/uploads/2015/06/Saddleback_women_in_STEM1.jpg">
+                </div>
+                <div class="col-xs-6">
+                    <img width="100%" height="100%"
+                         ng-src="https://scontent-lax3-1.xx.fbcdn.net/hphotos-xap1/t31.0-8/10857186_10152796149439217_4621378561487187301_o.jpg">
+                </div>
+            </div>
+        </div>
+    </md-whiteframe>
+    <hr/>
     <div class="row ">
         <md-whiteframe class="md-whiteframe-z4" layout>
             <div class="container center-panel">
                 <div class="row">
                     <div class="col-xs-12">
+                        <div class="container">
+                            <img width="95%" height="40%"
+                                 ng-src="https://scontent-lax3-1.xx.fbcdn.net/hphotos-xpt1/t31.0-8/12109955_1234103943281859_733426548420619095_o.jpg">                           </img>
+                            <h2>
+                                <a href="https://docs.google.com/forms/d/1aLah1rPqN3tq_JwagH4UhhpUsUEGEYCfWHgnGMLUdOc/viewform?c=0&w=1">Click here to sign up!</a>
+                            </h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </md-whiteframe>
+        <hr/>
+        <md-whiteframe class="md-whiteframe-z4" layout>
+            <div class="container center-panel">
+                <div class="row">
+                    <div class="col-xs-12">
                         <h4>Orange County Post - Saddleback College Student Chapter</h4>
+
                         <h3>About the Student Chapter</h3>
+
                         <p>In August 2014, a group of students at Saddleback College began the process of creating a S.A.M.E. Student Chapter. They elected a transitional team who will create a charter, constitution, and by-laws for this organization. They will then apply for affiliated club status with the Saddleback College ASG.</p>
+
                         <p>For more information about S.A.M.E., you can visit <a
                                 href="http://www.same.org">the National S.A.M.E. website</a> or <a
                                 href="http://sameoc.org">the local Orange County Chapter website.</a></p>
 
                         <p>Visit our <a href="https://www.facebook.com/groups/801641596552914/">Facebook Page.</a></p>
                     </div>
+                </div>
+            </div>
+        </md-whiteframe>
+        <hr class="featurette-divider">
+        <md-whiteframe class="md-whiteframe-z4" layout>
+            <div class="container center-panel">
+                <div class="row">
                     <div class="col-xs-12">
                         <h3>Chapter Bylaws, Charter, and Constitution</h3>
 
