Added images and more about information on people. There is also links to field trips and images of club members.

--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -58,13 +58,14 @@
                         </md-content>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 ">
-                        <h3>Mentorship <br>Committee Chair</h3>
+                        <h3><b>Mentorship</b><br>Committee Chair</h3>
                         <hr/>
+                        <img width="20%" height="20%" ng-src="../img/people/profile_leah_001.jpg">
                         <h4>Leah Jamison</h4>
                         <h6><a href="leahjamison44@gmail.com">leahjamison44@gmail.com</a></h6>
                         <hr/>
                         <md-content class="md-padding">
-                            <b>About Me</b>:
+                            <b>About Me</b>:<p>Leah grew up in Orange County and is a Civil Engineering major with hopes to transfer Fall 2016. She is a mentor at Mathobotix, teaching K-12 students about robotics and computer science. As our Mentorship Committee Chair, Leah hopes to use her experience to provide similar mentorship to fellow Saddleback students.</p>
                         </md-content>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 ">
@@ -146,7 +147,7 @@
                     <div class="col-xs-12 col-md-6 col-lg-3">
                         <h3>Larry Perez</h3>
                         <h5>Math Department</h5>
-
+                        <img width="20%" height="20%" ng-src="../img/people/profile_perez_001.jpg">
                         <p><b>E-mail:</b><a href="mailto:lperez@saddleback.edu">LPerez@saddleback.edu</a></p>
 
                         <p>
@@ -159,7 +160,7 @@
                     <div class="col-xs-12 col-md-6 col-lg-3">
                         <h3>Katlin Choi</h3>
                         <h5>Specialist / Project Specialist Programs</h5>
-
+                        <img width="20%" height="20%" ng-src="../img/people/profile_katlin_001.jpg">
                         <p><b>E-mail:</b><a href="mailto:kchoi@saddleback.edu">kchoi@saddleback.edu</a></p>
 
                         <p><b>About Me</b>
