Adjusted the layout of the images, there is a better solution once I have more time to do it.

--- a/app/partials/aboutUs.html
+++ b/app/partials/aboutUs.html
@@ -86,7 +86,7 @@
                 <hr class="featurette-divider">
                 <div class="row">
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 ">
-                        <h3><b>Fundraising</b><br>Fundraising> Committee Chair</h3>
+                        <h3><b>Fundraising</b><br>Committee Chair</h3>
                         <hr/>
                         <h4>Dylon Dickinson</h4>
                         <h6><a href="mailto:Ddickson0@saddleback.edu">Ddickson0@saddleback.edu</a></h6>
