--- a/app/partials/photo.gallery.html
+++ b/app/partials/photo.gallery.html
@@ -1,7 +1,47 @@
 <div class="container" ng-controller="galleryCtrl">
-    <div class="row panel">
-        <div ng-repeat="photo in photoList">
-            <img class="col-md-4 col-lg-3 padding" ng-src="{{photo}}" width="80%" height="80%">
-        </div>
+    <div class="row">
+        <md-whiteframe class="md-whiteframe-z4" layout>
+
+
+            <md-content class="container">
+
+                <div class="row">
+                    <div ng-repeat="photo in photoList">
+                        <div class="col-xs-12 col-sm-5 col-md-3 col-offset-1">
+                            <img class="img-rounded img-responsive " ng-src="{{photo}}">
+                        </div>
+                    </div>
+                </div>
+
+                <br>
+
+                <div class="row">
+                    <div ng-repeat="photo in meetings">
+                        <div class="col-xs-12 col-sm-5 col-md-3 col-offset-1">
+                            <img class="img-rounded img-responsive" ng-src="{{photo}}">
+                        </div>
+                    </div>
+                </div>
+                <br>
+
+                <div class="row">
+                    <div ng-repeat="photo in golfTourney">
+                        <div class="col-xs-12 col-sm-5 col-md-3 col-offset-1">
+                            <img class="img-rounded img-responsive" ng-src="{{photo}}">
+                        </div>
+                    </div>
+                </div>
+                <br>
+
+                <div class="row">
+                    <div ng-repeat="photo in studyGroup">
+                        <div class="col-xs-12 col-sm-5 col-md-3 col-offset-1">
+                            <img class="img-rounded img-responsive" ng-src="{{photo}}">
+                        </div>
+                    </div>
+                </div>
+                <br>
+            </md-content>
+        </md-whiteframe>
     </div>
 </div>
