Working on registration form for users, modifying grunt file to compress files and hopefully reduce the upload time.

--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -10,10 +10,6 @@
                         <md-icon md-svg-src="img/icons/ic_person_24px.svg" class="name"></md-icon>
                         <input ng-model="user.name" type="text">
                     </md-input-container>
-                    <md-input-container md-no-float>
-                        <md-icon md-svg-src="img/icons/ic_phone_24px.svg"></md-icon>
-                        <input ng-model="user.phone" type="text" placeholder="Phone Number">
-                    </md-input-container>
                     <md-input-container>
                         <!-- Use floating placeholder instead of label -->
                         <md-icon md-svg-src="img/icons/ic_email_24px.svg" class="email"></md-icon>
@@ -21,9 +17,13 @@
                                ng-required="true">
                     </md-input-container>
                     <md-input-container md-no-float>
-                        <md-icon md-svg-src="img/icons/ic_place_24px.svg" style="display:inline-block;"></md-icon>
-                        <input ng-model="user.address" type="text" placeholder="Address">
+                        <md-icon md-svg-src="img/icons/ic_phone_24px.svg"></md-icon>
+                        <input ng-model="user.phone" type="text" placeholder="Phone Number">
                     </md-input-container>
+                    <!--<md-input-container md-no-float>-->
+                        <!--<md-icon md-svg-src="img/icons/ic_place_24px.svg" style="display:inline-block;"></md-icon>-->
+                        <!--<input ng-model="user.address" type="text" placeholder="Address">-->
+                    <!--</md-input-container>-->
 
                 </md-content>
             </div>
@@ -34,7 +34,7 @@
         <div class="background-secondary">
             <div layout="row" layout layout-padding>
                 <md-button class="md-primary md-raised" ng-click="showLogin($event)" flex flex="100%">
-                    Login
+                    Already have an account? -> Login
                 </md-button>
                 <md-button class="md-primary md-raised" ng-click="showRegister($event)" flex flex="100%">
                     Register
