--- a/app/partials/aboutUs.html
+++ b/app/partials/aboutUs.html
@@ -6,7 +6,7 @@
                     <div class="col-xs-12 col-md-12 col-lg-4">
                         <h3><b>President</b></h3>
                         <hr/>
-                        <h4>Greg Zeborski</h4>
+                        <h4>Gregory Zaborski</h4>
                         <h6><a href="mailto:gzaborskijr@gmail.com">gzaborskijr@gmail.com</a></h6>
                         <hr/>
                         <md-content class="md-padding">
