--- a/app/partials/templates/registration.tmpl.html
+++ b/app/partials/templates/registration.tmpl.html
@@ -12,7 +12,7 @@
         <md-dialog-content style="max-width:800px;max-height:810px; ">
             <div>
                 <p>
-                    Login is under construction...
+                    Registration Unsuccessful.
                 </p>
             </div>
         </md-dialog-content>
