Working on the authentication service with firebase. Checking out a new branch for this service.

--- a/app/partials/templates/bk.register.tmpl.html
+++ b/app/partials/templates/bk.register.tmpl.html
@@ -1,5 +1,4 @@
-<!--<div class="container" ng-controller="MainCtrl">-->
-<div class="container" >
+<div class="container" ng-controller="MainCtrl">
     <div class="row">
         <!--<md-whiteframe class="md-whiteframe-14dp" layout-wrap>-->
         <div class="container">
@@ -21,10 +20,10 @@
                         <md-icon md-svg-src="img/icons/ic_phone_24px.svg"></md-icon>
                         <input ng-model="user.phone" type="text" placeholder="Phone Number">
                     </md-input-container>
-                    <md-input-container md-no-float>
-                        <md-icon md-svg-src="img/icons/ic_place_24px.svg" style="display:inline-block;"></md-icon>
-                        <input ng-model="user.address" type="text" placeholder="Address">
-                    </md-input-container>
+                    <!--<md-input-container md-no-float>-->
+                        <!--<md-icon md-svg-src="img/icons/ic_place_24px.svg" style="display:inline-block;"></md-icon>-->
+                        <!--<input ng-model="user.address" type="text" placeholder="Address">-->
+                    <!--</md-input-container>-->
 
                 </md-content>
             </div>
